[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 175.0
margin_right = 1026.0
margin_bottom = 89.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 852.0
margin_bottom = 88.0
align = 1
valign = 1

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 175.0
margin_top = 91.0
margin_right = 1025.0
margin_bottom = 231.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ColorRect2"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 844.0
margin_bottom = 138.0
align = 1
valign = 1

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 175.0
margin_top = 232.0
margin_right = 1026.0
margin_bottom = 398.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ColorRect3"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 850.0
margin_bottom = 168.0
align = 1
valign = 1

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 178.0
margin_top = 403.0
margin_right = 1027.0
margin_bottom = 597.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ColorRect4"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 842.0
margin_bottom = 192.0
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 4.0
margin_right = 174.0
margin_bottom = 87.0
text = "Imprime lista"

[node name="Button2" type="Button" parent="."]
margin_left = 5.0
margin_top = 186.0
margin_right = 175.0
margin_bottom = 230.0

[node name="Button3" type="Button" parent="."]
margin_left = 3.0
margin_top = 235.0
margin_right = 173.0
margin_bottom = 398.0
text = "Imprime texto"

[node name="Button4" type="Button" parent="."]
margin_left = 1.0
margin_top = 550.0
margin_right = 177.0
margin_bottom = 597.0

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 4.0
margin_top = 88.0
margin_right = 174.0
margin_bottom = 184.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 1.0
margin_top = 399.0
margin_right = 177.0
margin_bottom = 549.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
